<resources>
    <string name="app_name">Car Wash</string>
    <string name="registration">Регистрация</string>
    <string name="helper_text">пароль должен содержать не менее 6 символов</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_password_restart">Подтверждение пароля</string>
    <string name="hint_email">Email</string>
    <string name="sign_up_text">Зарегистрироваться</string>
    <string name="sign_in"><font color="#0099FF">Войти</font>, если Вы уже зарегистрированы</string>
    <string name="sign_in_link">Войти</string>
    <string name="sign_up_link">Зарегистрируйтесь</string>
    <string name="sign_in_text">Вход</string>
    <string name="sign_up">Еще нет аккаунта? <font color="#0099FF">Зарегистрируйтесь</font></string>
    <string name="sign_in_btn">Войти</string>
    <string name="search_nav">Город</string>
    <string name="settings">settings</string>
    <string name="sign_out">Выйти</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_city">Выбор города</string>
    <string name="temp_tv">%d°C</string>
    <string name="max_min_tv">%d°C / %d°C</string>
    <string name="date_tv">Последний раз мыли машину:</string>
    <string name="choose_city"><font color="#000000">Ваш город:</font>  %s</string>
    <string name="carwash_btn">Перейти к автомойкам</string>
    <string name="yes_car_wash">Определенно, сегодня стоит потратиться на мойку своей малышки</string>
    <string name="no_car_wash">В ближайшие дни ожидаются осадки</string>
    <string name="day_car_wash">Рекомендуется помыть машину %s</string>
    <string name="choose_date">Выберите дату</string>
    <string name="url_for_upload">https://openweathermap.org/img/wn/%s@2x.png</string>
    <string name="date_picker_tag">datePicker</string>
    <string name="work_manager_name">carWash</string>
    <string name="first_level">Чистая</string>
    <string name="second_level">Загрязненная</string>
    <string name="third_level">Очень грязная</string>
    <string name="level_of_car_pollution">Степень загрязненности вашей машины:</string>
    <string name="no_interner">Нет подключения к интернету</string>
    <string name="changes_save">Изменения сохранились</string>
    <string name="email_no_correct">Некорректный e-mail</string>
    <string name="password_no_correct">Пароль должен содержать не менее 6 символов</string>
    <string name="field_is_empty">Пожалуйста, заполните все поля</string>
    <string name="search_city_is_empty">Пожалуйста, выберите город</string>
    <string name="password_repeat__no_correct">Неправильный пароль</string>
    <string name="email_is_exists">Такой e-mail уже существует</string>
    <string name="sign_in_err">Неправильный e-mail или пароль</string>
    <string name="title_dialog">Оцените степень загрязненности вашей машины</string>
    <string name="language_tag">ru</string>
</resources>