<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search_nav"
        android:visible="false"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/nav_sign_out"
        android:visible="false"
        android:title="@string/sign_out"
        app:showAsAction="never" />
</menu>